Bug 23176 - seg fault not printing
Summary: seg fault not printing
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Output Views (other bugs)
Version First Reported In: 1.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2001-03-28 05:33 UTC by Unknown
Modified: 2004-12-16 05:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description battery841 2001-03-28 05:30:35 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           kdevelop
Version:           1.4 (using KDE 2.1.1 )
Severity:          normal
Installed from:    SuSE
Compiler:          gcc version 2.95.2 19991024 (release)
OS:                Linux
OS/Compiler notes: Not Specified

When I hit F9 to run a program in KDevelop it'll run.  Then it prints the info to console (its a console app I'm writing) but seg faults.  However KDevelop neglects to write Segementation Fault in the console so it appears to be exiting for another reason.  For example...

Would you like to create a new CVS profile?y
 
Press Enter to continue!

should say:

Would you like to create a new CVS profile?y

Segmentation Fault
Press Enter to continue!

(Submitted via bugs.kde.org)
(Called from KBugReport dialog. Fields OS manually changed)
Comment 1 John Firebaugh 2002-08-31 02:25:51 UTC
Thank you for your bug report.
The bug that your reported no longer applies to the latest development (CVS) 
version of KDE. This is most probably because the bug has been fixed the 
application has been substantially modified or the application no longer 
exists. The bug report will be closed.
Comment 2 Keffin Barnaby 2004-01-28 19:49:59 UTC
This bug seems to have re-surfaced in KDevelop 3.0RC1. When I get a segmentation fault in a C program I am not told about it, in fact the messages screen says that the program terminated normally. The only way I found out that the problem in my program was a segmentation fault was to try and run it in another terminal instead of konsole.
Comment 3 Jens Dagerbo 2004-01-28 19:57:29 UTC
Confirmed. Reopening.
Comment 4 Amilcar do Carmo Lucas 2004-02-02 20:29:22 UTC
Confirmed
Comment 5 Stephan Kulow 2004-05-18 11:03:31 UTC
Replaced battery841@mediaone.net with null@kde.org due to bounces by reporter
Comment 6 Matt Rogers 2004-12-16 05:34:53 UTC
CVS commit by mattr: 

Show the fact that we've aborted with a segmentation fault on run. Fixes
bug 23176

BUG: 23176


  M +7 -4      processwidget.cpp   1.21


--- kdevelop/lib/widgets/processwidget.cpp  #1.20:1.21
@@ -60,10 +60,6 @@ ProcessWidget::ProcessWidget(QWidget *pa
     setPalette(pal);
 
-#if (KDE_VERSION > 305)
     childproc = new KProcess();
     childproc->setUseShell(true);
-#else
-    childproc = new KShellProcess();
-#endif
 
     procLineMaker = new ProcessLineMaker( childproc );
@@ -156,5 +152,12 @@ void ProcessWidget::childFinished(bool n
         }
     } else {
+      if ( childproc->signalled() && childproc->exitSignal() == SIGSEGV )
+      {
+        s = i18n("*** Process aborted. Segmentation fault ***");
+      }
+      else
+      {
         s = i18n("*** Process aborted ***");
+      }
         t = ProcessListBoxItem::Error;
     }