Show the fact that we've aborted with a segmentation fault on run. Fixes bug 23176

BUG: 23176